See https://dev.gnupg.org/T5598#149649 for the problem description.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rGf0162afb6b6f common: New function substitute_envvars. | |||
rGd4768bb982ad common: Support a gpgconf.ctl file under Unix. | |||
rG9c272dc24545 common: New function substitute_envvars. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | werner | T5592 AppImage of Kleopatra | ||
Resolved | Saturneric | T5598 AppImage of gpg | ||
Resolved | werner | T5599 Make gpg use the helpers baked into its AppImage |
Event Timeline
Comment Actions
The actual patch is rGd4768bb982adb5c8410303334ee8d82ba0d71f3b (our parser in dev.gnupg.org missed to pick up the bug-id due to teh use of scissor lines in the commit message).